# manifest-verifier

./: CHANGES.md  Cargo.toml
.config/: mise.toml
.github/workflows/: ci.yaml  release.yaml
lib/manifest-verifier/: Cargo.toml
lib/manifest-verifier-lib/: Cargo.toml
lib/manifest-verifier-lib/src/: checker.rs  lib.rs  location.rs  rule.rs  rule_builder.rs
lib/manifest-verifier/src/: error.rs  lib.rs  main.rs  manifest.rs
lib/manifest-verifier/tests/: valid.rs
